15 august 2005 Laurent Rineau
- in Surface_mesher: new Combining_oracle, and Oracle_visitor,
- in Mesh_3: test/Mesh_3/combined_spheres tests that new oracle.

28 july 2005 LR MY
- fixed the add_node() for memory leaks in Graph.h
- fixed the face_type() for edges in Complex_2_in_triangulation_3.h

27 July 2005 LR MY
- fixed return type of apply in Multi_implicit_oracle.h 
- remove the const of const int number_of_functions 


27 July 2005 LR MY
- changed some named
- multi_implicit_oracle added


19 July 2005 Laurent Rineau
Change in examples/Surface_mesher/surface_mesher.C :
- added a macro SURFACE_MESHER_POLYHEDRAL. If defined, the polyhedral
version is compiled.
- change of makefile (and .cvsignore), so that two versions
implicit_surface_mesher and polyhedral_surface_mesher are built by make
all.

19 July 2005 Laurent Rineau
Minor changes:
- use mirror_facet, from Triangulation_3. Introduced in CGAL_3_2_I_146.


30 June 2005 Laurent Rineau
- attempt to merged trunk, sliver_branch and my local modifications...
- may be correct, or not.

12 may 2005 David Rey
- create several surface meshers:
  - with no verification about manifoldness
  - constraint regulare edges
  - constraint regular edges and no boundary
  - constraint manifoldness

- mv names into better ones:
  - Chew_4_surfaces -> Surface_mesher
  - Chew_4_surfaces_manifold -> Surface_mesher_regular_edges
  - Chew_4_surfaces_manifold_without_boundary -> 
    Surface_mesher_regular_edges_without_boundary
  - Chew_4_surfaces_manifold_simple_vertices -> Surface_mesher_manifold

24 March 2005 Laurent Rineau
- compatibility with new requirements of Mesher_level
- code is still broken, since 2005/02/27.

8 February 2005 Laurent Rineau
- new changes.txt file
- removed files that are in Mesh_2 and Mesh_3:
    - Mesher_level.h (Mesh_2)
    - Triangulation_mesher_level_traits_3 (Mesh_3)
- new template parameters for Mesher_level
- modified Complex_2_in_triangulation_3: